PlayerDTO reworked